add module, form for product

--- a/src/pages/catalog/Catalog.module.scss
+++ b/src/pages/catalog/Catalog.module.scss
@@ -1,10 +1,10 @@
-.catalog-container {
+.catalogContainer {
   display: flex;
   flex-direction: column;
   align-items: center;
-  .categories-name {
+  .categoriesName {
     padding: 10px 0;
-    .category-name {
+    .categoryName {
       padding-right: 10px;
     }
   }
