--- a/src/pages/subcategories/Subcategories.module.scss
+++ b/src/pages/subcategories/Subcategories.module.scss
@@ -1,10 +1,10 @@
-.subcat-container {
+.subcatContainer {
   display: flex;
   flex-direction: column;
   align-items: center;
   width: 100%;
 
-  .subcat-list {
+  .subcatList {
     display: grid;
     grid-template-columns: repeat(auto-fill, 350px);
     justify-content: space-around;
